--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         />
         <div id="detail-product">
           <p id="title">Awesome Product</p>
-          <p id="description">
+          <p id="descriptionText">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text
             ever since the 1500s, when an unknown printer took a galley of type
